# pytemplate

./: .gitignore  Makefile  POETRY_TO_UV_MIGRATION.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.py  scrape.py
src/2_str_slice/: 15-slice-stride.py  16-catch_all_unpack.py
src/3_loop_iter/: 23_all_any.py
src/4_dict/: 26-dict_get.py  26-dict_get_2.py  26-dict_get_3.py  26-dict_get_4.py  26-dict_get_5.py  27-defaultdict.py
src/5_function/: 30-mutable.py  33-class_instead_nonlocal.py  33-nonlocal.py  34-args.py  35-kargs.py  36-defaultargs.py  37-positionargs.py  38-wraps.py  39-partial.py  README.md
src/6_gen/: 40-naiho.py  42-naiho-:=.py  43-gene.py  44-gene-naiho.py  45-yieldfrom.py  REDME.md
src/7_class/: 48-func.py  49-isinstance.py  49-poly.py  50-single-dispatch.py  51-dataclasses.py  52-classmethod.py  52-non-classmethod.py  53-mixin.md  README_singledispatch.md
src/abc433/: a.py  b.py  c.py  d.py
src/applicationerror/: main.py  ngconfig.json
src/arg/: arge.py  arge_and_filter.py
src/ctf/: xor.py  xor2.py
src/error/applicationerror/: main.py
src/error/systemerror/memoryerror/: main.py
src/error/systemerror/oserror/: main.py
src/formatter/: README.md
src/fr/prac/: dataclass_prac.py
src/immutable/dataclass/: main.py
src/immutable/final/: main.py
src/immutable/property/: main.py
src/pandas/: merge.py  multiple_id.py
src/scrape/: analysis.py  fetch.py  intensity_analysis.py  region_analysis.py
src/test/: README.md  database_mock.py  feed.py  test_feed.py
src/test/better_test/: feed.py  main.py  test_feed.py  test_main.py
src/test/mock_playground/: database.py  database_mock.py
src/test/simple_test/: test_feed.py
src/yield_generator/: return_iter.py  return_list.py
tests/: test_arge.py
