# プロジェクト基本情報
[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = "S3 data aggregation and Google Slides automation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
main = "src.project.main:main"

# 依存関係(商用)
[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
pandas = "^2.1.0"
google-api-python-client = "^2.108.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"
python-dotenv = "^1.0.0"

# 依存関係(開発のみ)
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"

# S3関連のメソッド定義にコード上から飛べない問題の解消 → https://dev.classmethod.jp/articles/try-boto3-stubs/
boto3-stubs = {extras = ["essential"], version = "^1.34.0"}


# blackっていうフォーマッタの設定
[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
