# プロジェクト基本情報
[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = "S3 data aggregation and Google Slides automation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
main = "src.project.main:main"

# 依存関係(商用)
[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
pandas = "^2.1.0"
google-api-python-client = "^2.108.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.1"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"

# 依存関係(開発のみ)
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"
mypy = "^1.10.0"

# S3関連のメソッド定義にコード上から飛べない問題の解消 → https://dev.classmethod.jp/articles/try-boto3-stubs/
boto3-stubs = {extras = ["essential"], version = "^1.34.0"}


# ruff設定（black、flake8、isortの統合）
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
strict = true
explicit_package_bases = true
