# プロジェクト基本情報
[project]
name = "pytemplate"
version = "0.1.0"
description = "S3 data aggregation and Google Slides automation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11" #poetryだとtool.poetry.dependenciesに書いていたが、uvだとprojectに書く

# 依存関係(商用)
dependencies = [
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "google-api-python-client>=2.108.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.3",
]

# 依存関係(開発のみ)
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.10.0",
    "boto3-stubs[essential]>=1.34.0",
]

[project.scripts]
main = "src.project.main:main"

# ruff設定（black、flake8、isortの統合）
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
strict = true
explicit_package_bases = true
